--- a/instagramClone/package.json
+++ b/instagramClone/package.json
@@ -20,6 +20,7 @@
     "react-native": "0.63.2",
     "react-native-gesture-handler": "^1.7.0",
     "react-native-image-picker": "^2.3.3",
+    "react-native-linear-gradient": "^2.5.6",
     "react-native-modal": "^11.5.6",
     "react-native-reanimated": "^1.13.0",
     "react-native-safe-area-context": "^3.1.6",
@@ -31,7 +32,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
-    "@babel/runtime": "^7.8.4",
+    "@babel/runtime": "^7.11.2",
     "@react-native-community/eslint-config": "^1.1.0",
     "babel-jest": "^25.1.0",
     "eslint": "^6.5.1",
